--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -11,7 +11,7 @@
     <title>Muziki</title>
     <script defer src="https://unpkg.com/alpinejs@3.9.0/dist/cdn.min.js"></script>
   </head>
-  <body class="bg-gray-100 font-sans pb-28">
+  <body class=" dark:bg-slate-700 font-sans pb-28">
     <div id="app"></div>
     
     <script type="module" src="/src/main.js"></script>
